Fixed spacings errors with landing page

--- a/Site-Template/pages/index.css
+++ b/Site-Template/pages/index.css
@@ -21,6 +21,7 @@ button {
 .hero-secondary {
     height: 18px;
     color: #E5E7EB;
+    font-size: 18px;
 }
 
 .header {
@@ -42,37 +43,34 @@ button {
     display: flex;
     justify-content: right;
     width: 50%;
-    justify-content: right;
     flex: 1;
-    gap: 10px;
+    gap: 20px;
 }
 
 .section-1 {
     display: flex;
     flex-direction: row;
     width: 100%;
-    padding: 60px 10%;
+    padding: 100px 10%;
     align-items: center;
+    gap: 20px
 }
 
 .hero-div {
     width: 50%;
     align-items: center;
-    margin: 10px;
-    flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: left;
-    
 }
 
 .hero-image {
     width: 50%;
+    display: flex;
     justify-content: right;
 }
 
 .prim-button {
-    margin: 10px;
+    margin-top: 50px;
 }
 
 .cards {
@@ -81,19 +79,20 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 30px 20%;
+    padding: 60px 20%;
 }
 
 .cards-title {
     font-weight: bold;
-    padding-bottom: 10px;
+    padding-bottom: 40px;
+    font-size: 40px;
 }
 
 .container {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    gap: 10px;
+    gap: 40px;
     margin: 20px 0;
 }
 
@@ -101,11 +100,12 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 }
 
 .sub-image {
-    border: #3882F6 solid 3px;
-    border-radius: 5px;
+    border: #3882F6 solid 5px;
+    border-radius: 10px;
     height:fit-content;
     width: 100%;
     margin-bottom: 5px;
@@ -113,13 +113,14 @@ button {
 
 .quote {
     background-color: #E5E7EB;
-    padding: 80px 20%;
+    padding: 140px 20%;
 }
 
 .quote-text {
     font-style: italic;
     font-weight: 100;
-    font-size: larger;
+    font-size: 38px;
+    padding-bottom: 30px;
 }
 
 .quote-author {
@@ -132,7 +133,7 @@ button {
     display: flex;
     justify-content: center;
     color: white;
-    padding: 50px;
+    padding: 80px;
 }
 
 .call-action {
@@ -165,8 +166,10 @@ button {
 
 #hero-main-text {
     height: 48px;
+    font-size: 50px;
     color: #F9FAF8;
     font-weight: 900;
+    padding-bottom: 120px;
 }
 
 #header-logo-text {
